hero section overlaps fixed

--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -21,16 +21,23 @@
 		transform: translateY(-50%);
 	}
 
+	&__left{
+		padding-top: 60px;
+		@mixin atXSmall{
+			padding-top: auto;
+		}
+	}
+
 	&__site-title{
-		font-size: 20px;
+		font-size: 16px;
 		line-height: 1;
 		padding: 0;
 		@mixin atTiny{
-			font-size: 22px;
+			font-size: 18px;
 			line-height: 1;
 		}
 		@mixin atXSmall{
-			font-size: 26px;
+			font-size: 22px;
 			line-height: 1;
 		}
 		@mixin atSmall{
@@ -42,7 +49,7 @@
 	}
 
 	&__site-description{
-		font-size: 16px;
+		font-size: 13px;
 		line-height: 1.3;
 		padding: 0;
 		font-weight: 100;
@@ -58,13 +65,16 @@
 	}
 	&__left-btn{
 		max-width: 300px;
-		margin-top: -10px;
+		margin-top: 7px;
 	}
 	&__form{
 		max-width: 100%;
 		border-radius: 10px;
 		background: rgba($bgcolor, 0.7);
 		padding: 10px 20px 20px;
+		@mixin atSmall{
+			margin-top: 80px;
+		}
 	}
 
 	&__form-header{
@@ -90,7 +100,13 @@
 		}
 		.hero__Aff, .hero__Rel, .hero__Acc{
 			position: absolute;
-			top: -45%;
+			p{
+				font-size: 16px;
+				@mixin atSmall{
+					font-size: 32px;
+				}
+			}
+			top: 0;
 			transform: translateX(-100%);
 			transition: transform ease-out .5s;
 		}
